force-app/main/default/objects/Lead/fields/Created_in_Last_3_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Last_3_Business_Days__c</fullName>
    <description>Flags referrals created in last 24-72 hrs (excluding weekends)</description>
    <formula>IF(WEEKDAY( TODAY() ) == 5 || WEEKDAY( TODAY() ) == 6, 
AND(CreatedDate &lt;=  NOW() - 1 , CreatedDate &gt;=  NOW() - 3), 
AND(CreatedDate &lt;=  NOW() - 1 , CreatedDate &gt;=  NOW() - 5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created in Last 3 Business Days</label>
    <type>Checkbox</type>
</CustomField>