force-app/main/default/objects/Lead/fields/Date_Stamp_In_Contact_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_Stamp_In_Contact_Event__c</fullName>
    <label>Date Stamp - Registered Event Attendance</label>
    <type>Date</type>
</CustomField>