force-app/main/default/objects/Lead/fields/Expected_Future_Cohort_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Future_Cohort_Year__c</fullName>
    <description>For a Lead updated to status &apos;Future Cohort&apos;, specifies the year they expect to go ahead with their application.</description>
    <label>Expected Future Cohort Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2031</fullName>
            </value>
            <value>
                <fullName>2032</fullName>
            </value>
            <value>
                <fullName>2033</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>