force-app/main/default/objects/Lead/fields/Last_Activity_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_Range__c</fullName>
    <formula>IF( ISNULL(LastActivityDate), &quot;Lead not contacted&quot;,
IF(TODAY() - 3 &lt;= LastActivityDate, &quot;Updated in the last 3 days&quot;,
IF(TODAY() - 7 &lt;= LastActivityDate, &quot;Updated in the last 7 days&quot;,
IF(TODAY() - 14 &lt;= LastActivityDate, &quot;Updated in the last 14 days&quot;,
&quot;Updated more than 14 days ago&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Date Range</label>
    <type>Text</type>
</CustomField>