force-app/main/default/objects/Lead/recordTypes/FLP_Lead.recordType-meta.xml
<RecordType>
    <fullName>FLP_Lead</fullName>
    <active>true</active>
    <businessProcess>FLP Leads</businessProcess>
    <description>Record type for Future Leaders Program (FLP) leads</description>
    <label>FLP Lead</label>
</RecordType>