force-app/main/default/objects/Lead/recordTypes/Leads.recordType-meta.xml
<RecordType>
    <fullName>Leads</fullName>
    <active>true</active>
    <businessProcess>Leads</businessProcess>
    <description>Leads generated from recruitment activity and E-News Website</description>
    <label>Leads</label>
</RecordType>