force-app/main/default/objects/Lead/recordTypes/Newsletter_Subscriber.recordType-meta.xml
<RecordType>
    <fullName>Newsletter_Subscriber</fullName>
    <active>true</active>
    <businessProcess>Leads</businessProcess>
    <label>Newsletter Subscriber</label>
</RecordType>