force-app/main/default/objects/Lead/recordTypes/TTL_Lead.recordType-meta.xml
<RecordType>
    <fullName>TTL_Lead</fullName>
    <active>true</active>
    <businessProcess>TTL Leads</businessProcess>
    <description>Record type for Teach to Lead (TTL) leads</description>
    <label>TTL Lead</label>
</RecordType>