force-app/main/default/objects/Lead/validationRules/Year_required_for_Future_Cohort_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_required_for_Future_Cohort_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status , &apos;Future Cohort&apos;), 
ISBLANK( TEXT(Expected_Future_Cohort_Year__c) ) )</errorConditionFormula>
    <errorMessage>Must select &apos;Expected Future Cohort Year&apos; for Leads updated to &apos;Future Cohort&apos; status.</errorMessage>
</ValidationRule>